--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
       "eslint-plugin-react-hooks": "^4.6.0",
       "eslint-plugin-react-refresh": "^0.4.6",
       "prettier": "^3.3.1",
+      "sass": "^1.77.4",
       "typescript": "^5.2.2",
       "vite": "^5.2.0",
       "vitest": "^1.6.0"
