--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
       "build": "tsc && vite build",
       "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
       "prettier": "prettier .",
-      "preview": "vite preview"
+      "preview": "vite preview",
+      "test": "vitest"
    },
    "dependencies": {
       "react": "^18.2.0",
@@ -16,8 +17,13 @@
       "scss": "^0.2.4"
    },
    "devDependencies": {
-      "@types/react": "^18.2.66",
-      "@types/react-dom": "^18.2.22",
+      "@testing-library/dom": "^10.1.0",
+      "@testing-library/jest-dom": "^6.4.5",
+      "@testing-library/react": "^16.0.0",
+      "@testing-library/user-event": "^14.5.2",
+      "@types/node": "^20.14.2",
+      "@types/react": "^18.3.3",
+      "@types/react-dom": "^18.3.0",
       "@typescript-eslint/eslint-plugin": "^7.2.0",
       "@typescript-eslint/parser": "^7.2.0",
       "@vitejs/plugin-react-swc": "^3.5.0",
@@ -27,6 +33,7 @@
       "eslint-plugin-react": "^7.34.2",
       "eslint-plugin-react-hooks": "^4.6.0",
       "eslint-plugin-react-refresh": "^0.4.6",
+      "jsdom": "^24.1.0",
       "prettier": "^3.3.1",
       "sass": "^1.77.4",
       "typescript": "^5.2.2",
