--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
       "build": "tsc && vite build",
       "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
       "prettier": "prettier .",
-      "preview": "vite preview",
+      "preview": "vite preview --host",
       "test": "vitest"
    },
    "dependencies": {
