--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,14 @@
+# docker-compose.yml
 version: '3.8'
 
 services:
    app:
       build: .
       ports:
-         - '9999:9999'
-      volumes:
-         - .:/app
-         - /app/node_modules
-      environment:
-         - NODE_ENV=production
+         - '9999:80'
+      networks:
+         - app-network
+
+networks:
+   app-network:
+      driver: bridge
